--- a/.build.yaml
+++ b/.build.yaml
@@ -1,4 +1,6 @@
 dependencies:
+  - name: kms-cmake-utils
+    version: ">= 1.5.0"
   - name: kms-core
     version: ">= 6.6.2"
   - name: kms-elements
