CMake: Add section for Warnings are Errors" rule exceptions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,11 @@ include(CommonBuildFlags)
 common_buildflags_set()
 #common_buildflags_print()
 
+# Development: Add here exceptions to the "Warnings are Errors" rule.
+# Also, DOCUMENT WHY and always remove them as soon as the problem is fixed.
+# For example:
+# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-error=unused-function")
+
 # FIXME Disable error when macros __TIME__, __DATE__ or __TIMESTAMP__ are encountered
 include(CheckCXXCompilerFlag)
 CHECK_CXX_COMPILER_FLAG("-Wno-error=date-time" HAS_WARNING_DATE_TIME)
