--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Build-Depends: debhelper (>= 9),
  libboost-thread-dev,
  libevent-dev,
  libglibmm-2.4-dev,
+ libgstreamer-plugins-base1.5-dev,
  libsigc++-2.0-dev,
  libssl1.0-dev | libssl-dev (<< 1.1.0)
 Standards-Version: 4.0.0
@@ -37,7 +38,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  kms-core (>= 6.7.0),
  kms-elements (>= 6.7.0),
  kms-filters (>= 6.7.0),
- libgstreamer1.5-0
+ libgstreamer-plugins-base1.5-0
 Breaks: kurento-media-server-6.0
 Replaces: kurento-media-server-6.0
 Description: Kurento Media Server
