First version of GStreamer 1.14 port
Updated gstreamer libs/deps to match bionic's default, instead of using KMS forks of it.
Updated websocketpp static library to 0.7.0-11 (needed for compatibility with latest OpenSSL). This is bionic's default, which means there's no need to keep a copy of the lib inside this project.

--- a/debian/control
+++ b/debian/control
@@ -50,6 +50,7 @@ Architecture: any
 Section: devel
 Depends: kurento-media-server (= ${binary:Version}),
  ${misc:Depends},
+ libwebsocketpp-dev (>= 0.7.0-11),
  kms-cmake-utils (>= 6.7.0),
  kms-core-dev (>= 6.7.0),
  kms-elements-dev (>= 6.7.0),
