debian/control: Drop 'libssl1.0-dev' for Bionic compatibility
'libssl1.0-dev' conflicts with 'libssl-dev' so it is either one or the
other. Everything in Ubuntu 18.04 (Bionic) is built against 'libssl-dev'
(OpenSSL 1.1) so there is no way around it, we need to upgrade
everything from OpenSSL 1.0 to 1.1

--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,7 @@ Build-Depends: debhelper (>= 9),
  libglibmm-2.4-dev,
  libgstreamer-plugins-base1.0-dev,
  libsigc++-2.0-dev,
- libssl1.0-dev | libssl-dev (<< 1.1.0),
+ libssl-dev,
  libwebsocketpp-dev
 Standards-Version: 4.0.0
 Vcs-Git: https://github.com/Kurento/kurento-media-server.git
