--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Priority: optional
 Maintainer: Kurento <kurento@googlegroups.com>
 Build-Depends: debhelper (>= 9),
  cmake,
+ gstreamer1.5-plugins-good,
  kms-cmake-utils (>= 6.7.0),
  kms-core-dev (>= 6.7.0),
  kms-elements-dev (>= 6.7.0),
