test/BaseTest: Fix bad usage of 'execl()'

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,8 @@
 include(TestHelpers)
+
 set(TEST_VARIABLES
-  "MEDIA_SERVER_CONF_FILE=${CMAKE_CURRENT_SOURCE_DIR}/../kurento.conf.json"
-  "SERVER_DIR=${CMAKE_CURRENT_BINARY_DIR}/../server/kurento-media-server"
+  "TEST_BIN_PATH=${CMAKE_CURRENT_BINARY_DIR}/../server/kurento-media-server"
+  "TEST_CONF_PATH=${CMAKE_BINARY_DIR}/config/kurento.conf.json"
   "GST_PLUGIN_PATH=$ENV{GST_PLUGIN_PATH}:${CMAKE_BINARY_DIR}"
   "KURENTO_MODULES_PATH=$ENV{KURENTO_MODULES_PATH}:${CMAKE_BINARY_DIR}"
   "BOOST_TEST_CATCH_SYSTEM_ERRORS=no"
