CMakeLists.txt: Remove duplicated dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,9 +69,8 @@ find_package(OpenSSL REQUIRED)
 find_package(PkgConfig)
 pkg_check_modules(GLIBMM REQUIRED glibmm-2.4)
 pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.5)
-pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.5>=1.7.0~0)
-pkg_check_modules(GSTREAMER_SDP REQUIRED gstreamer-sdp-1.5>=1.7.0~0)
-pkg_check_modules(EVENT REQUIRED libevent>=2.0.16-stable)
+pkg_check_modules(GSTREAMER_SDP REQUIRED gstreamer-sdp-1.5)
+pkg_check_modules(EVENT REQUIRED libevent>=2.0.16)
 
 add_subdirectory(server)
 
