--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: kurento-media-server
 Priority: optional
 Maintainer: Kurento <kurento@googlegroups.com>
 Build-Depends: debhelper (>= 9),
+ build-essential,
  cmake,
  gstreamer1.5-plugins-good,
  kms-cmake-utils (>= 6.7.0),
