--- a/scaffold/control.template
+++ b/scaffold/control.template
@@ -2,6 +2,7 @@ Source: ${nameScoreLower}
 Maintainer: Maintainer Name
 Priority: optional
 Build-Depends: debhelper (>= 9),
+ build-essential,
  cmake,
  pkg-config,
  libopencv-dev,
