--- a/debian/control
+++ b/debian/control
@@ -81,17 +81,17 @@ Architecture: any
 Section: debug
 Depends: ${misc:Depends},
  libc6-dbg,
- libglib2.0-0-dbg,
+ libglib2.0-0-dbgsym | libglib2.0-0-dbg,
  kmsjsoncpp-dbg,
- libnice10-dbgsym,
+ libnice10-dbgsym | libnice-dbg,
  openwebrtc-gst-plugins-dbg,
- libgstreamer1.5-0-dbg,
- gstreamer1.5-libav-dbg,
- gstreamer1.5-nice-dbgsym,
- gstreamer1.5-plugins-bad-dbg,
- gstreamer1.5-plugins-base-dbg,
- gstreamer1.5-plugins-good-dbg,
- gstreamer1.5-plugins-ugly-dbg,
+ libgstreamer1.0-0-dbg,
+ gstreamer1.0-libav-dbg,
+ gstreamer1.0-nice-dbgsym,
+ gstreamer1.0-plugins-bad-dbg,
+ gstreamer1.0-plugins-base-dbg,
+ gstreamer1.0-plugins-good-dbg,
+ gstreamer1.0-plugins-ugly-dbg,
  kms-jsonrpc-dbg,
  kms-core-dbg,
  kms-elements-dbg,
