debian/control: kurento-dbg depends on libc6-dbgsym | libc6-dbg
Installs "libc6-dbgsym" if the Ubuntu debug repos have been enabled,
otherwise falls back to "libc6-dbg".

--- a/debian/control
+++ b/debian/control
@@ -84,7 +84,7 @@ Package: kurento-dbg
 Architecture: any
 Section: debug
 Depends: ${misc:Depends},
- libc6-dbg,
+ libc6-dbgsym | libc6-dbg,
  libglib2.0-0-dbgsym | libglib2.0-0-dbg,
  kmsjsoncpp-dbg,
  libnice10-dbgsym | libnice-dbg,
@@ -102,4 +102,5 @@ Depends: ${misc:Depends},
  kms-filters-dbg,
  kurento-media-server-dbg
 Description: Meta-package that installs debug symbols
- for Kurento Media Server and all relevant 3rd-party libraries.
+ This dummy package depends on all debug packages for Kurento Media Server
+ and relevant 3rd-party libraries.
