--- a/debian/control
+++ b/debian/control
@@ -87,7 +87,7 @@ Depends: ${misc:Depends},
  libc6-dbgsym | libc6-dbg,
  libglib2.0-0-dbgsym | libglib2.0-0-dbg,
  kmsjsoncpp-dbg,
- libnice10-dbgsym | libnice-dbg,
+ libnice10-dbgsym,
  openwebrtc-gst-plugins-dbg,
  libgstreamer1.5-0-dbg,
  gstreamer1.5-libav-dbg,
