Delete websocketpp inline sources, use libwebsocketpp instead
websocketpp is the library that provides WebSocket support for Kurento
Media Server. It is a header-only library, so initially it got imported
directly into the project.

Ubuntu 14.04 did not provide this library, but 16.04 onwards do have it,
so we're moving to depend on the package instead of having to deal with
the source code.

This is an advantage because our copy of websocketpp code needs some
adjustments in order to make it compatible with the breaking changes
introduced by OpenSSL 1.1; instead of worrying about this, we'll just
use the Ubuntu's package which already comes with whatever changes are
needed.

Part of https://github.com/Kurento/bugtracker/issues/356
Fixes https://github.com/Kurento/bugtracker/issues/467
Closes https://github.com/Kurento/kurento-media-server/pull/15
Closes https://github.com/Kurento/kurento-media-server/pull/11

--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Build-Depends: debhelper (>= 9),
  libglibmm-2.4-dev,
  libgstreamer-plugins-base1.5-dev,
  libsigc++-2.0-dev,
- libssl1.0-dev | libssl-dev (<< 1.1.0)
+ libwebsocketpp-dev
 Standards-Version: 4.0.0
 Vcs-Git: https://github.com/Kurento/kurento-media-server.git
 Vcs-Browser: https://github.com/Kurento/kurento-media-server
@@ -61,7 +61,8 @@ Depends: kurento-media-server (= ${binary:Version}),
  libboost-log-dev,
  libboost-program-options-dev,
  libboost-thread-dev,
- libevent-dev
+ libevent-dev,
+ libwebsocketpp-dev
 Breaks: kurento-media-server-6.0-dev
 Replaces: kurento-media-server-6.0-dev
 Description: Kurento Media Server
