scaffold: full review to update "Writing Modules" doc
Most important changes:

* Rename kurento-module-scaffold.sh to kurento-module-scaffold
Tools shouldn't have extensions. It's not like Python or Perl tools in
the system all end with .py or .pl. E.g. /usr/bin/debuild is a Perl
script.

* Rename all debian template files to start with "debian-", so they are
all listed together.

* Full review of kurento-module-scaffold. Use "unofficial" Bash safe
mode. Abort on all errors, and handle variable expansions in a safe way.

* Fix CMake compiler flags to use the same that are used by the other
Kurento modules. Specifically this fixes the lack of -fPIC on the
generated modules, which had been made mandatory a while back in main
Kurento modules.

* Format template files so they don't mix spaces+tabs and fix other
similar spacing or alignment issues.

--- a/scaffold/CMakeLists.txt
+++ b/scaffold/CMakeLists.txt
@@ -1,31 +1,37 @@
 cmake_minimum_required(VERSION 2.8)
 
 set(SCAFFOLD_TEMPLATES
-  CMakeLists_root.txt.template
-  CMakeLists_src.txt.template
-  CMakeLists_server.txt.template
-  CMakeLists_server_plugin.txt.template
   CMakeLists_plugin.txt.template
-  filter.kmd.json.template
+  CMakeLists_root.txt.template
+  CMakeLists_server_plugin.txt.template
+  CMakeLists_server.txt.template
+  CMakeLists_src.txt.template
+  config.h.cmake.template
+  debian-changelog.template
+  debian-control.template
+  debian-name-dev.install.template
+  debian-name.install.template
+  debian-name.install.OpenCV.template
+  debian-rules.template
   filter.Filter.kmd.json.template
+  filter.kmd.json.template
   gstplugin.cpp.template
   gstplugin.h.template
   plugin.c.template
-  control.template
-  name.install.template
-  name.install.OpenCV.template
-  rules.template
-  changelog.template
-  config.h.cmake.template
-  name-dev.install.template
 )
 
-install(FILES ${SCAFFOLD_TEMPLATES} DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${CUSTOM_PREFIX}/scaffold/)
+install(
+  FILES ${SCAFFOLD_TEMPLATES}
+  DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${CUSTOM_PREFIX}/scaffold/
+)
 
-configure_file(kurento-module-scaffold.sh ${CMAKE_CURRENT_BINARY_DIR}/kurento-module-scaffold.sh @ONLY)
+configure_file(
+  kurento-module-scaffold
+  ${CMAKE_CURRENT_BINARY_DIR}/kurento-module-scaffold @ONLY
+)
 
 install(
-  FILES ${CMAKE_CURRENT_BINARY_DIR}/kurento-module-scaffold.sh
+  FILES ${CMAKE_CURRENT_BINARY_DIR}/kurento-module-scaffold
   PERMISSIONS
     OWNER_READ OWNER_WRITE OWNER_EXECUTE
     GROUP_READ GROUP_EXECUTE
