--- a/scaffold/debian-changelog.template
+++ b/scaffold/debian-changelog.template
@@ -2,5 +2,4 @@ ${nameScoreLower} (0.0.1~rc1) testing; urgency=medium
 
   * Initial release.
 
- -- Maintainer name <maintainerMail@mail>  ${date}
-
+ -- Maintainer Name <maintainer.name@example.com>  ${date}
