--- a/scaffold/plugin.c.template
+++ b/scaffold/plugin.c.template
@@ -4,7 +4,7 @@
 #include "gst${name}.h"
 
 static gboolean
-init (GstPlugin * plugin)
+init (GstPlugin *plugin)
 {
   if (!gst_${nameUndersScoreLower}_plugin_init (plugin))
     return FALSE;
@@ -12,8 +12,7 @@ init (GstPlugin * plugin)
   return TRUE;
 }
 
-GST_PLUGIN_DEFINE (GST_VERSION_MAJOR,
-    GST_VERSION_MINOR,
+GST_PLUGIN_DEFINE (GST_VERSION_MAJOR, GST_VERSION_MINOR,
     ${name},
     "Filter documentation",
     init, VERSION, GST_LICENSE_UNKNOWN, "PACKAGE_NAME", "origin")
