cmake: remove KURENTO_DOT_DIR, make GST_DEBUG_DUMP_DOT_DIR dir to work

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,7 @@ include(TestHelpers)
 set(TEST_VARIABLES
   "TEST_BIN_PATH=${CMAKE_CURRENT_BINARY_DIR}/../server/kurento-media-server"
   "TEST_CONF_PATH=${CMAKE_BINARY_DIR}/config/kurento.conf.json"
-  "GST_PLUGIN_PATH=$ENV{GST_PLUGIN_PATH}:${CMAKE_BINARY_DIR}"
+  "GST_PLUGIN_PATH=${CMAKE_BINARY_DIR}:$ENV{GST_PLUGIN_PATH}"
   "KURENTO_MODULES_PATH=$ENV{KURENTO_MODULES_PATH}:${CMAKE_BINARY_DIR}"
   "BOOST_TEST_CATCH_SYSTEM_ERRORS=no"
 )
