cmake: Use OpenCVConfig.cmake to load all OpenCV versions
Use the official CMake config file (OpenCVConfig.cmake) that comes
preinstalled with all versions of OpenCV on Ubuntu, which load the
library regardless of its version.

This is valid and works the same for all known OpenCV versions:
* v2 (Ubuntu 16.04)
* v3 (Ubuntu 18.04)
* v4 (Ubuntu 20.04)

--- a/scaffold/CMakeLists_root.txt.template
+++ b/scaffold/CMakeLists_root.txt.template
@@ -37,8 +37,7 @@ if(${_len} GREATER 2)
 endif()
 
 set(GST_REQUIRED ^1.0.0)
-set(GLIB_REQUIRED ^2.38)
-set(OPENCV_REQUIRED ^2.0.0)
+set(OPENCV_REQUIRED <5.0.0)
 
 find_package(PkgConfig)
 
@@ -48,7 +47,9 @@ pkg_check_modules(GSTREAMER_BASE REQUIRED gstreamer-base-1.0>=${GST_REQUIRED})
 pkg_check_modules(GSTREAMER_VIDEO REQUIRED gstreamer-video-1.0>=${GST_REQUIRED})
 pkg_check_modules(GSTREAMER_CHECK REQUIRED gstreamer-check-1.0>=${GST_REQUIRED})
 pkg_check_modules(KMSCORE REQUIRED kmscore)
-pkg_check_modules(OPENCV REQUIRED opencv>=${OPENCV_REQUIRED})
+
+include(GenericFind)
+generic_find(LIBNAME OpenCV VERSION ${OPENCV_REQUIRED} REQUIRED)
 
 # Generate file "config.h"
 set(VERSION ${PROJECT_VERSION})
