cmake (ALL REPOS): Install all Kurento files to /usr/share/cmake/Kurento
Stop using the per-version installation directories for CMake; i.e.
instead of installing at
  /usr/share/cmake-X.YY/Modules/
install all Kurento CMake files at
  /usr/share/cmake/Kurento/

This is done to avoid attaching Kurento packages to one specific version
of CMake. For example, if kms-core had been built on Ubuntu 20.04
(Cmake 3.16) all files would go into /usr/share/cmake-3.16/Modules/
This makes impossible to update the CMake version in the machine! E.g.
by using the CMake PPA, CMake 3.22 can be installed on Ubuntu 20.4; but
all Kurento files would still be installed in the old version's path, so
they wouldn't be found by the newer CMake.

Also rename:
* "CMake" dirs to "cmake" (lowercase)
* "KurentoHelpers" to "KurentoUtils"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,17 @@ cmake_minimum_required(VERSION 2.8)
 project("kurento-media-server")
 message(STATUS "CMake project: ${PROJECT_NAME}")
 
+include(GNUInstallDirs) # CMAKE_INSTALL_*
+
 # Test configuration
 set(GENERATE_TESTS FALSE CACHE BOOL "Always build tests: add `make check_build` to normal `make` calls")
 set(DISABLE_TESTS FALSE CACHE BOOL "Enable running `make check` during the building process")
 set(VALGRIND_NUM_CALLERS 20 CACHE STRING "Valgrind option: maximum number of entries shown in stack traces")
 
-message("If KurentoHelpers is not found, you need to install 'kms-cmake-utils' from the Kurento repository")
-find_package(KurentoHelpers REQUIRED)
+find_package(KurentoUtils)
+if(NOT KurentoUtils_FOUND)
+  message(FATAL_ERROR "KurentoUtils not found; please install package 'kms-cmake-utils'")
+endif()
 
 include(KurentoGitHelpers)
 install_git_hook(pre-commit ${CMAKE_CURRENT_SOURCE_DIR}/hooks/pre-commit.hook)
@@ -79,8 +83,6 @@ enable_testing()
 
 add_subdirectory(test)
 
-
-include(GNUInstallDirs)
 install(FILES kurento.conf.json sdp_pattern.txt DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/${CUSTOM_PREFIX})
 
 file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/config)
